--- a/clubs/index.html
+++ b/clubs/index.html
@@ -2,32 +2,16 @@
 <html lang="en">
 <head>
 
-  <!--
-
-  ##TAG INDEX FOR ROGER##
-
-  - #cofe - CofE news box JavaScript insert
-  - #content - content! Text etc on pages.
-  - #footer - info at foot of website, includes current year etc.
-  - #nav - links at top to pages
-  - #side - sidebar for info on home page, extra links on other pages etc
-
-  -->
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>St. Andrew's Church Ferring</title>
+  <title>St. Andrew's Church Ferring - Clubs & Activities</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -46,6 +30,9 @@
 
 </head>
 <body>
+
+  <a name="top"></a>
+
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!--Container for ALL content, everything inside this--><div class="container">
@@ -104,40 +91,190 @@
 
     <!--Row begins--><div class="row">
 
-      <!--Side navigation/info begin #side--><div class="four columns" id="sidebarBox">
-        <ul>
-          <li class="list-title">Services Update</li>
-          <li>Next Family Service<br />
-              Sunday 4th September 2016 at 9.30 am<br />
-              (Pet thanksgiving service)</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Easter%20St%20Andrew's%202015.pdf">Easter Flower arrangements in St Andrew's</a></li>
-          <li class="list-title">Other Dates</li>
-          <li>Julian Meetings in Church,<br />
-          first Wednesday of the month 7:30 - 8:10 pm</li>
-          <li class="list-title">Social Events</li>
-          <li><a href="http://www.standrewsferring.org.uk/Documents/Social_events_2016%20.pdf">Social Events 2016</a><br />
-          (Further Information from Margaret Metcalf after the 9:30 Service in the Church Hall)</li>
+
+
+      <!--Content begins #content--><div class="twelve columns" id="content">
+
+        <h1 class="title">Clubs &amp; Activities</h1>
+
+        <h3 class="title contents">Contents</h3>
+
+        <ul class="contents">
+          <li><strong><a href="#transport">Church Transport</a></strong></li>
+          <li><a href="#gin">GIN: (Girls in the Neighbourhood)</a></li>
+          <li><a href="#pathway">Pathway Group</a></li>
+          <li><a href="#seedlings">Seedlings</a></li>
+          <li><a href="#tennis">St Andrew’s Table Tennis Group</a></li>
+          <li><a href="#trefoil">Trefoil Guild</a></li>
+          <li><a href="#other">Other group contacts</a></li>
         </ul>
-      </div><!--Side navigation/info ends-->
 
-      <!--Content begins #content--><div class="eight columns nomargin" id="contentBox">
-        <p>Welcome to the St Andrew's Church, Ferring, website, we hope that this site will be of interest to you.</p>
 
-        <p>If you live or are visiting the area of Ferring, you will find a very warm welcome at our church. We are a friendly village
-        church on the sunny South Coast. It's a bit of a squeeze on a Sunday morning, but there is room for you.</p>
+        <h2>Social Life at St. Andrew's Church</h2>
 
-        <p>Try the 9:30 on Sundays for the Parish Communion.</p>
+        <p>As well as the opportunity for fellowship each Sunday at worship and at the informal refreshments after the 9.30 am service, we have an active and varied calendar of events, sometimes these are for fund-raising and sometimes merely for pleasure!</p>
 
-        <p>On the first Sunday of each month there is a Family Service in the Church at 9:30, in place of the Parish Communion.
-        Our Uniformed Organisations attend this service.</p>
+        <div class="centre-600"><img src="../images/events-picnic.jpg" alt="" class="fluid" /></a></div>
 
-        <p>Seasonal Services will be shown on the Weekly Pew sheets, on the Notice boards, in the Parish Magazine, and on this website.</p>
+        <p>We hold occasional Sunday lunches and Parish Teas which are extremely popular.</p>
 
-        <p>See the <a href="services">Services page</a> for details of all services, and notification of any changes.</p>
+        <p>Other events include Quiz Nights, Poetry and Puddings evenings, tea in the Vicarage Garden, barn dances, promises Auctions – almost anything that includes food and the chance to meet, chat and have fun!</p>
 
-        <!--CofE JavaScript for news box #cofe-->
-        <script type="text/javascript" src="http://www.churchofengland.org/cofe-rss.js?feed=news&amp;n=3&amp;showdescription=0"></script>
-        <noscript><h2 class="cofe-rss-alternate-content"><a href="http://www.churchofengland.org/news/">News from the Church of England</a></h2></noscript>
+        <div class="centre-600"><img src="../images/events-salisbury2016.jpg" alt="" class="fluid" /></a></div>
+
+        <p>Each year group bookings are made for theatre trips to Worthing and Chichester and between 40 and 100 folk participate.</p>
+
+        <p>For details of specific events, <strong>contact Margaret Metcalf (01903 244420)</strong></p>
+
+        <a name="transport"></a>
+
+        <h2>Church Transport</h2>
+
+        <p>We offer a free transport service to enable local people to attend St. Andrew's Church, either for services or social events.  All our drivers are volunteers.</p>
+
+        <p><strong>Contact</strong>: Sharon Miller on 01903 242327</p>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
+
+
+
+        <h2>Groups</h2>
+
+        <a name="gin"></a>
+
+        <p><strong>GIN: (Girls in the Neighbourhood)</strong>: We have two social events a year.  In the summer, usually July, we meet in a restaurant for a meal. In December we have an 'in house' social evening with food to which partners are invited and for the second half of that evening we have some form of musical entertainment.</p>
+
+        <p>Our speakers are varied and include talks and demonstrations.</p>
+
+        <p><strong>Contact</strong>: Wendy Hughes on 01903 243526</p>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
+
+        <hr />
+
+
+        <a name="pathway"></a>
+
+        <p><strong>Pathway Group</strong>: Friendly and supportive Bible Study Groups for women, held on mid-week afternoons and evenings in private homes.</p>
+
+        <p><strong>Contact</strong>: Sharon Miller on 01903 242327</p>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
+
+        <hr />
+
+
+        <a name="seedlings"></a>
+
+        <p><strong>Seedlings</strong>: Seedlings is open to all Mothers/Carers/Grandparents of babies and toddlers in the Ferring and Goring areas only.</p>
+
+        <p>We meet every Friday during school term time in the Church Centre for two hours 9.15 – 11.15 a.m., where the children engage in playing and interacting with each other.  A planned and varied craft activity is provided and there is always singing with actions including the use of musical instruments.</p>
+
+        <p>The cost of each session is £1.50 per adult which includes coffee/tea/squash and biscuits served by our wonderful kitchen team.</p>
+
+        <p><strong>Contact</strong>: Lynn Stevenson on 01903 241839<br />or Emma Seager on 01903 911682</p>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
+
+        <hr />
+
+
+        <a name="tennis"></a>
+
+        <p><strong>St. Andrew's Table Tennis Group</strong>: The Thursday Table Tennis Group is a mixed group (both in terms of ability and gender!) and although quite competitive, we primarily meet for the exercise and the friendship.</p>
+
+        <p>If you’d like to see if it’s your 'cup of tea', either pop into the Church Centre on a Thursday between 7.30 and 9.30  in the evening, or ring Margaret Metcalf (see below).</p>
+
+        <p>We look forward to hearing from you!</p>
+
+        <p><strong>Contact</strong>: Margaret Metcalf on 01903 244420</p>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
+
+        <hr />
+
+
+        <a name="trefoil"></a>
+
+        <p><strong>Trefoil Guild</strong>: The Guild represents 'Guiding for Grown-ups' and is part of the Girl Guiding movement.  Membership is open to anyone with an interest in guiding, but it does not matter whether  you have been a previous member of either guiding or scouting.  Our current membership is all female, but husbands and partners join us on many occasions.</p>
+
+        <p>We currently meet on the second Wednesday of the month at 2:30-4:00 the afternoon in the Church Centre.</p>
+
+        <p><strong>Contact</strong>: Ruth Sims 01903 243212</p>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
+
+        <hr />
+
+
+
+        <a name="other"></a>
+
+        <h2>Other group contacts</h2>
+
+        <table id="table" summary="St. Andrew's Church list of contacts for church groups">
+          <thead>
+            <tr>
+              <th scope="col">Organisation</th>
+              <th scope="col">Contact</th>
+              <th scope="col">Telephone</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td scope="row">Women's Fellowship</td>
+              <td scope="row">Tessa Bailey</td>
+              <td scope="row">W 248039</td>
+            </tr>
+            <tr>
+              <td scope="row">Men's Group</td>
+              <td scope="row">Rev. Gary Ingram</td>
+              <td scope="row">W 241645</td>
+            </tr>
+            <tr>
+              <td scope="row">Bible Reading Fellowship</td>
+              <td scope="row">Rev. Gary Ingram</td>
+              <td scope="row">W 241645</td>
+            </tr>
+            <tr>
+              <td scope="row">Julian Meetings</td>
+              <td scope="row">Janet Birchall</td>
+              <td scope="row">W 504337</td>
+            </tr>
+            <tr>
+              <td scope="row">Chief Scout</td>
+              <td scope="row">Duncan Inch</td>
+              <td scope="row">W 506103</td>
+            </tr>
+            <tr>
+              <td scope="row">Sea Scouts</td>
+              <td scope="row">Jo Dommett</td>
+              <td scope="row">07515 777252</td>
+            </tr>
+            <tr>
+              <td scope="row">Cubs</td>
+              <td scope="row">Kim Davidge</td>
+              <td scope="row">W 246223</td>
+            </tr>
+            <tr>
+              <td scope="row">Beavers</td>
+              <td scope="row">Duncan Inch</td>
+              <td scope="row">W 506103</td>
+            </tr>
+            <tr>
+              <td scope="row">Rainbows</td>
+              <td scope="row">Christine Trimmer</td>
+              <td scope="row">W 246382</td>
+            </tr>
+            <tr>
+              <td scope="row">Brownies</td>
+              <td scope="row">Pat Clark</td>
+              <td scope="row">W 249639</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <p class="backtotop">&#94; <a href="#top">Back to top</a></p>
       </div><!--Content ends-->
 
     </div><!--Row ends-->
