--- a/links/index.html
+++ b/links/index.html
@@ -107,20 +107,69 @@
       <!--Content begins #content--><div class="twelve columns" id="content">
         <h1 class="title">Links</h1>
 
-        <table id="tableBig" summary="St. Andrew's Church links list">
+        <table summary="St. Andrew's Church links list">
           <thead>
             <tr>
+              <th scope="col">&nbsp;</th>
               <th scope="col">Church</th>
               <th scope="col">&nbsp;</th>
               <th scope="col">Village/Worthing/International</th>
-              <th scope="col">&nbsp;</th>
             </tr>
           </thead>
           <tbody>
 
             <tr>
-              <td scope="row" class="link-logo"><img src="../images/link-fb.jpg" class="link"></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-fb.jpg" class="link"></div></td>
               <td scope="row" class="link"><a href="http://www.facebook.com/standrewsferring">St Andrew's Facebook page</a></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-parish.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://ferring.arun.gov.uk/main.cfm">Ferring Parish Council</a></td>
+            </tr>
+
+            <tr>
+              <td scope="row"><div class="link-logo"><img src="../images/link-cofe.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.churchofengland.org">Church of England Website</a></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-village.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.ferringvillage.co.uk/">Ferring Village Website</a></td>
+            </tr>
+
+            <tr>
+              <td scope="row"><div class="link-logo"><img src="../images/link-diocese.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.chichester.anglican.org/">Chichester Diocese</a></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-wine.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="https://www.new-wine.org/">New Wine</a></td>
+            </tr>
+
+            <tr>
+              <td scope="row"><div class="link-logo"><img src="../images/link-cathedral.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.chichestercathedral.org.uk/">Chichester Cathedral</a></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-bcdo.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.bigchurchdayout.com/">Big Church Day Out</a></td>
+            </tr>
+
+            <tr>
+              <td scope="row"><div class="link-logo"><img src="../images/link-cursillo.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.chichestercursillo.co.uk/">Chichester Cursillo</a></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-worthing.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.worthingchurches.org.uk/">Worthing Churches</a></td>
+            </tr>
+
+            <tr>
+              <td scope="row"><div class="link-logo"><img src="../images/link-cofe.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.achurchnearyou.com/">A Church Near You</a></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-shct.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.sussexhistoricchurchestrust.org.uk/">Sussex Historic Churches Trust</a></td>
+            </tr>
+
+            <tr>
+              <td scope="row"><div class="link-logo"><img src="../images/link-mystery.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.ship-of-fools.com/mystery/2011/2076.html">Our Mystery Worshipper Entry</a></td>
+              <td scope="row"><div class="link-logo"><img src="../images/link-care.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://www.churchcare.co.uk/">Church Care</a></td>
+            </tr>
+
+            <tr>
+              <td scope="row"><div class="link-logo"><img src="../images/link-rehab.jpg" class="link"></div></td>
+              <td scope="row" class="link"><a href="http://rehab-recovery.co.uk/">Rehab Recovery</a> is a free and national helpline assisting people suffering from addiction and mental health problems. You can contact <a href="http://rehab-recovery.co.uk/">Rehab Recovery</a> on 0800 088 66 86</td>
             </tr>
 
           </tbody>
@@ -142,11 +191,7 @@
 
              <td align="left" height="46" width="15%"><a target="_blank" title="Ferring Parish Council Website" href="http://www.arun.gov.uk/cgi-bin/buildpage.pl?mysql=1235">Ferring
              Parish Council</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </td>
-           <td align="right" height="46" width="15%">&nbsp;</td>
-           </tr>
-           <tr>
-             <td align="right" height="46" width="15%">&nbsp;</td>
-             <td align="center" height="46" width="10%" valign="middle">
+
                  <a target="_blank" title="Church of England Website" href="http://www.churchofengland.org">
                  <img border="0" src="Images/coebelowright.jpg" width="86" height="67"></a><br>&nbsp;</td>
              <td height="46" width="20%" valign="middle">
